# Recursive-shield

./: .env.example  .gitignore  AGENTS.md  ASSUMPTIONS.md  Project.md  README.md  SESSION_SUMMARY.md  SKILL.md  TEST_README.md  contracts.py  pyproject.toml  recording.md  requirements.txt  split.json
agentimmune/: __init__.py  brokerage.py  capture.py  contracts.py  eval_harness.py  guardrail.py  mongo_stream.py  oracle.py  orchestrator.py  sample_data.py  server.py  store.py
agentimmune_data/: __init__.py  cli.py  config.py  db.py  embeddings.py  eval_runs.py  retrieval.py  split.py  vectors.py
artifacts/: trace_lookup.example.json  trace_lookup.json  trace_lookup.redteam_candidate.example.json
docs/: e2e_recording_runbook.md  person_a_handoff.md  person_d_notes_exfil_bypass_handoff.md  real_task_a_gemini_testing.md  task_a_strict_trace_audit.md  task_a_to_d_handoff.md  trace_lookup_contract.md
main/: END_TO_END_TASK_C_SUMMARY.md  TASK_C_data_mongodb_voyage.md
notebooks/: agentimmune_gemma_lora_colab.py
redteam/: ablation.py  audio_utils.py  checker.py  config.py  contracts.py  deepset_audio_eval.py  gemini_audio_eval.py  generate_seeds.py  generator.py  jailbreakv_audio_eval.py  test_redteam.py  tts_adapter.py
requirements/: gpu-training.txt
scripts/: __init__.py  capture_demo_replays.py  capture_demo_stub.py  eval_l1_bypasses.py  gemini_cua_action.py  generate_audio_attacks.py  generate_notes_exfil_variants.py  generate_order_staging_variants.py  generate_stealthy_attacks.py  generate_stealthy_attacks_2.py  generate_stealthy_attacks_3.py  smoke_d1.py  (+13 more)
(+193 files in other folders)
