[project]
name = "agentimmune"
version = "0.1.0"
description = "Recursive Shield / AgentImmune spine contracts, guardrail stubs, and eval harness."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "numpy>=1.26,<3",
  "requests>=2.32,<3",
  "voyageai>=0.3,<1",
  "google-genai>=2.3.0",
  "SpeechRecognition>=3.17.0",
]
mongo = [
  "pymongo>=4.8,<5",
]
voyage = [
  "voyageai>=0.3,<1",
]
google = [
  "google-genai>=2.3.0",
]
serving = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "httpx>=0.27,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
py-modules = ["contracts"]

[tool.setuptools.packages.find]
include = ["agentimmune*", "agentimmune_data*", "redteam*", "scripts*"]
exclude = ["artifacts*", "fixtures*", "tasks*", "docs*"]
